@@ -20,6 +20,7 @@ import org.opentripplanner.routing.api.response.RoutingErrorCode;
 import org.opentripplanner.routing.api.response.RoutingResponse;
 import org.opentripplanner.routing.api.response.TripSearchMetadata;
 import org.opentripplanner.routing.error.RoutingValidationException;
+import org.opentripplanner.routing.framework.DebugAggregator;
 import org.opentripplanner.routing.services.FareService;
 import org.opentripplanner.standalone.server.Router;
 import org.opentripplanner.transit.raptor.RaptorService;
@@ -55,12 +56,16 @@ public class RoutingWorker {
 
     private final RaptorService<TripSchedule> raptorService;
 
+    /** An object that accumulates profiling and debugging info for inclusion in the response. */
+    public final DebugAggregator debugAggregator = new DebugAggregator();
+
     private final RoutingRequest request;
     private Instant filterOnLatestDepartureTime = null;
     private int searchWindowUsedInSeconds = NOT_SET;
     private Itinerary firstRemovedItinerary = null;
 
     public RoutingWorker(RaptorConfig<TripSchedule> config, RoutingRequest request) {
+        this.debugAggregator.startedCalculating();
         this.raptorService = new RaptorService<>(config);
         this.request = request;
     }
@@ -69,12 +74,16 @@ public class RoutingWorker {
         List<Itinerary> itineraries = new ArrayList<>();
         List<RoutingError> routingErrors = new ArrayList<>();
 
+        this.debugAggregator.finishedPrecalculating();
+
         // Direct street routing
         try {
             itineraries.addAll(DirectStreetRouter.route(router, request));
         } catch (RoutingValidationException e) {
             routingErrors.addAll(e.getRoutingErrors());
         }
+
+        this.debugAggregator.finishedDirectStreetRouter();
 
         // Transit routing
         try {
@@ -83,18 +92,19 @@ public class RoutingWorker {
             routingErrors.addAll(e.getRoutingErrors());
         }
 
-        // Filter itineraries
-        long startTimeFiltering = System.currentTimeMillis();
+        this.debugAggregator.finishedTransitRouter();
 
         // Filter itineraries
         itineraries = filterItineraries(itineraries);
-        LOG.debug("Filtering took {} ms", System.currentTimeMillis() - startTimeFiltering);
         LOG.debug("Return TripPlan with {} itineraries", itineraries.size());
+
+        this.debugAggregator.finishedFiltering();
 
         return new RoutingResponse(
             TripPlanMapper.mapTripPlan(request, itineraries),
             createTripSearchMetadata(),
-            routingErrors
+            routingErrors,
+            debugAggregator
         );
     }
 
@@ -102,7 +112,11 @@ public class RoutingWorker {
         request.setRoutingContext(router.graph);
         if (request.modes.transitModes.isEmpty()) { return Collections.emptyList(); }
 
-        long startTime = System.currentTimeMillis();
+        if (!router.graph.transitFeedCovers(request.dateTime)) {
+            throw new RoutingValidationException(List.of(
+                    new RoutingError(RoutingErrorCode.OUTSIDE_SERVICE_PERIOD, InputField.DATE_TIME)
+            ));
+        }
 
         TransitLayer transitLayer = request.ignoreRealtimeUpdates
             ? router.graph.getTransitLayer()
@@ -117,22 +131,18 @@ public class RoutingWorker {
                 request.rctx.bannedRoutes,
                 request.walkSpeed
         );
-        LOG.debug("Filtering tripPatterns took {} ms", System.currentTimeMillis() - startTime);
 
-        /* Prepare access/egress transfers */
+        this.debugAggregator.finishedPatternFiltering();
 
-        double startTimeAccessEgress = System.currentTimeMillis();
-
+        // Prepare access/egress transfers
         Collection<AccessEgress> accessTransfers = AccessEgressRouter.streetSearch(request, false, 2000, transitLayer.getStopIndex());
         Collection<AccessEgress> egressTransfers = AccessEgressRouter.streetSearch(request, true, 2000, transitLayer.getStopIndex());
 
-        LOG.debug("Access/egress routing took {} ms",
-                System.currentTimeMillis() - startTimeAccessEgress
-        );
         verifyEgressAccess(accessTransfers, egressTransfers);
 
+        this.debugAggregator.finishedAccessEgress();
+
         // Prepare transit search
-        double startTimeRouting = System.currentTimeMillis();
         RaptorRequest<TripSchedule> raptorRequest = RaptorRequestMapper.mapRequest(
                 request,
                 requestTransitDataProvider.getStartOfTime(),
@@ -148,11 +158,9 @@ public class RoutingWorker {
 
         LOG.debug("Found {} transit itineraries", transitResponse.paths().size());
         LOG.debug("Transit search params used: {}", transitResponse.requestUsed().searchParams());
-        LOG.debug("Main routing took {} ms", System.currentTimeMillis() - startTimeRouting);
+        this.debugAggregator.finishedRaptorSearch();
 
         // Create itineraries
-
-        double startItineraries = System.currentTimeMillis();
 
         RaptorPathToItineraryMapper itineraryMapper = new RaptorPathToItineraryMapper(
                 transitLayer,
@@ -185,10 +193,7 @@ public class RoutingWorker {
             filterOnLatestDepartureTime = Instant.ofEpochSecond(request.dateTime + searchWindowUsedInSeconds);
         }
 
-        LOG.debug("Creating {} itineraries took {} ms",
-                itineraries.size(),
-                System.currentTimeMillis() - startItineraries
-        );
+        this.debugAggregator.finishedItineraryCreation();
 
         return itineraries;
     }
@@ -231,7 +236,7 @@ public class RoutingWorker {
     private void checkIfTransitConnectionExists(RaptorResponse<TripSchedule> response) {
         int searchWindowUsed = response.requestUsed().searchParams().searchWindowInSeconds();
         if (searchWindowUsed <= 0 && response.paths().isEmpty()) {
-            throw new RoutingValidationException(Collections.singletonList(
+            throw new RoutingValidationException(List.of(
                 new RoutingError(RoutingErrorCode.NO_TRANSIT_CONNECTION, null)));
         }
     }
